# quickbuild-analytics-data

./: .gitattributes  README.md  pyproject.toml  runs.parquet  stats-2022-07-24.json  subtrees-clean.parquet  tokio_roots.txt  tokio_subtrees.csv  top_25_percent_downloads.csv
cache/: get_downloads_data-f7ca76420fc3b5dc2fcce09ff38e6b00bafacd6457b1d0eb9d63e62c6fe85553.parquet
experiments/build-popular-quickinstall-releases/: serde_derive.log.annotated  thiserror-impl.log.annotated
experiments/build-popular-quickinstall-releases/failure/: bandwhich.out  bat.out  cargo-binstall.out  cargo-criterion.out  cargo-watch.out  cargo-xcode.out  diskus.out  flutter_rust_bridge_codegen.out  git-delta.out  gitoxide.out  hexyl.out  hyperfine.out  just.out  probe-rs-cli.out  pueue.out  ripgrep.out  svm-rs.out  tauri-cli.out  trunk.out  wasm-bindgen-cli.out  watchexec-cli.out  xh.out  zellij.out
experiments/build-popular-quickinstall-releases/success/: bat.out  cargo-criterion.out  cargo-hack.out  cargo-llvm-cov.out  cargo-watch.out  cargo-xcode.out  diskus.out  fd-find.out  flutter_rust_bridge_codegen.out  hexyl.out  hx.out  hyperfine.out  just.out  kani-verifier.out  pueue.out  ripgrep.out  wasm-bindgen-cli.out
notebooks/: deps.ipynb  downloads-only.ipynb
scripts/: get_runs.py  tokio_deps.py
