[tool.poetry]
name = "qb"
version = "0.1.0"
description = ""
authors = ["David Laban <david.laban@red-badger.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^4.14.3"
ipykernel = "^5.5.3"
pandas = "^1.2.3"
pyarrow = "^3.0.0"
nbformat = "^5.1.3"
psycopg2 = "^2.8.6"
nbstripout = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
